--- a/B1SLayer/B1SLayer.csproj
+++ b/B1SLayer/B1SLayer.csproj
@@ -9,10 +9,10 @@
     <RepositoryUrl>https://github.com/bgmulinari/B1SLayer.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>sap business one;sap b1;service layer;http client;fluent;flurl</PackageTags>
+    <PackageTags>sap business one;b1;service layer;http client;fluent;flurl</PackageTags>
     <PackageReleaseNotes>https://github.com/bgmulinari/B1SLayer/releases</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
